[tool.poetry]
name = "sitemon"
version = "0.1.0"
description = "A python cli tool to monitor status of a site without any external libraries."
license = "MIT LICENSE"
readme = "README.md"
authors = ["brootware <brootware@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sitemon = "sitemon.sitemon:main"
sm = "sitemon.sitemon:main"